<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ksmori.hu.ait.minesweeper.GameActivity">

    <TextView
        android:id="@+id/numMinesLeftField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_vertical_margin" />

    <ksmori.hu.ait.minesweeper.view.MinesweeperView
        android:id="@+id/minesweeperView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_vertical_margin" />

    <ToggleButton
        android:id="@+id/btnToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/digToggle"
        android:textOn="@string/flagToggle" />

    <Button
        android:id="@+id/btnRestart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restartButton" />
</LinearLayout>
